Slider shifted, partners' logo fixed
by The Jerry

--- a/frontend/components/Slider.css
+++ b/frontend/components/Slider.css
@@ -1,6 +1,6 @@
 .slider, .slider-wrapper {
     margin: 10px auto 10px auto;
-    width: 100%;
+    width: 80%;
     height: auto;
     display: block
 }
